--- a/scss/block/_card.scss
+++ b/scss/block/_card.scss
@@ -1,5 +1,5 @@
 .card {
-  background: url(/img/Rectangle.png);
+  background: url(img/Rectangle.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
