--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -1,5 +1,5 @@
 .footer {
-  background-image: url(/img/Rectangle.png);
+  background-image: url(img/Rectangle.png);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
